# Yantra

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  export_paper.py  init_dbs.sql  pyproject.toml  requirements.txt
.agent/: README.md  paper_config.yaml
.agent/rules/: agent-independence.md  config-enforcement.md  core-standards.md  creational-patterns.md  ddd-structure.md  import-standards.md  magic-values.md  manager-rules.md  python-env.md  testing-standards.md  type-safety.md
.agent/skills/chatha/: SKILL.md
.agent/skills/clean-implementation/: SKILL.md
.agent/skills/compliance-officer/: SKILL.md
.agent/skills/dakini/: SKILL.md
.agent/skills/deep-analyzer/: SKILL.md
.agent/skills/doc-architect/: SKILL.md
.agent/skills/eswa-compliance-checker/: SKILL.md
.agent/skills/external-researcher/: SKILL.md
.agent/skills/journal-content-drafter/: SKILL.md
.agent/skills/journal-master/: SKILL.md
.agent/skills/kutusan/: SKILL.md
.agent/skills/math-extractor/: SKILL.md
.agent/skills/mayavi/: SKILL.md
.agent/skills/novelty-analyst/: SKILL.md
.agent/skills/package-maintainer/: SKILL.md
.agent/skills/package-maintainer/examples/: pyproject.toml  versioning_strategy.md
.agent/skills/paper-analyzer/: SKILL.md
.agent/skills/paper-drafter/: SKILL.md
.agent/skills/paper-planner/: SKILL.md
.agent/skills/paper-reviewer/: SKILL.md
.agent/skills/refactor-agent/: SKILL.md
.agent/skills/research-gap-analyst/: SKILL.md
.agent/skills/security-and-pitfalls/: SKILL.md
.agent/skills/test-scaffolder/: SKILL.md
.agent/skills/visual-generator/: SKILL.md
.dvc/: config
.planning/: COVERAGE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: mlops_config.yaml
data/: input.dvc
docs/: Architecture.md  DEPENDENCIES.md  VIRTUAL_ENV_USAGE.md
docs/agent/: README.md  paper_generation_guide.md
docs/agent/rules/: config-enforcement.md  core-standards.md  creational-patterns.md  dry-principle.md  git-cleanliness.md  logging-standards.md  python-env.md  testing-standards.md
docs/agent/skills/: chatha.md  clean-implementation.md  compliance-officer.md  dakini.md  deep-analyzer.md  doc-architect.md  external-researcher.md  journal-master.md  journal-math-extractor.md  kutusan.md  logging-architect.md  math-extractor.md  mayavi.md  novelty-analyst.md  package-maintainer.md  paper-analyzer.md  (+9 more)
docs/paper/: .progress.yaml
(+152 files in other folders)
