[project]
name = "Yantra"
version = "1.0.7"
description = "Yantra is a unified MLOps library that provides clean, protocol-based interfaces for essential MLOps tools including DVC, MLflow, Prefect, and Evidently."
dependencies = [
    "PyYAML == 6.0.3",
    "dvc-s3 == 3.0.1",
    "boto3 == 1.34.0",
    "mlflow == 3.6.0",
    "prefect == 3.6.4",
    "evidently ==  0.7.17",
    "nltk == 3.9.2",
    "pandas == 2.3.2",
    "numpy == 2.2.6",
    "watchfiles == 1.1.1",
    "python-dotenv == 1.2.1"
]

[tool.setuptools]
package-dir = { "" = "src/nikhil" }

[tool.setuptools.packages.find]
where = ["src/nikhil"]